--- a/app/views/gateway/index.html.erb
+++ b/app/views/gateway/index.html.erb
@@ -46,7 +46,7 @@
 	        	Subscribe
 	        	<input type="submit" onClick="_gaq.push(['_trackEvent', 'contact', 'list-subscribe', 'holding form']);"/>
 	        </label>
-	        <small class="supporting">Receive occasional emails about our releases. <!--  <a href="about/privacy/" title="Detention Logs Privacy Policy">See&nbsp;our&nbsp;Privacy&nbsp;Policy</a> -->.</small>
+	        <small class="supporting">Receive occasional emails about our releases. <!--  <a href="about/privacy/" title="Detention Logs Privacy Policy">See&nbsp;our&nbsp;Privacy&nbsp;Policy</a> --></small>
 		<% end %>
          <footer class="site-footer" role="contentinfo">
 	        <ul class="contact discrete">
