added canonical meta tag

--- a/app/views/gateway/index.html.erb
+++ b/app/views/gateway/index.html.erb
@@ -12,6 +12,7 @@
         <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
         <meta name="viewport" content="width=device-width">
 		<meta name="google-site-verification" content="UyFaPbUx_nMcjSfI1G-dkYcTZljC0-do61HPxvESXic" />
+		<link rel="canonical" href="http://www.detentionlogs.com.au" />
 
     	<!-- Twitter -->
 	    <meta name="twitter:card" content="summary">
