--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -36,7 +36,7 @@
 			<ul class="supporting">
 				<li><a href="http://detentionlogs.com.au/about/resources">Resources</a></li>
 				<li><a href="http://detentionlogs.com.au/glossary">Glossary</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>				
+				<li><a href="http://detentionlogs.com.au/principles">Our Principles</a></li>				
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
