added bottom-margin to h2

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -78,6 +78,8 @@ h2 {
 	font-size: 1.25rem;
 	padding-top: 32px;
 	padding-top: 2rem;
+	margin-bottom: 16px;
+	margin-bottom: 1rem;
 }
 h3 {
 	font-weight: bold;
