--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -238,6 +238,7 @@ input:-ms-input-placeholder { color: #555;}
 		text-decoration: none;
 	}
 }
+.lede,
 .loud,
 .distinct {
 	font-size: 18px;
@@ -873,6 +874,7 @@ body {
 	font-size: 1.4rem;
 	line-height: 1.5;
 }
+.lede,
 .distinct {
 	font-size: $scale-2;
 }
