made redaction less bold

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -172,7 +172,7 @@ a:focus {
 	background-color: $contrast;
 }
 .redacted {
-	background-color: $fade;
+	background-color: $contrast;
 	color: $regular-text;
 }
 
