added glossary link into the about page

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -66,6 +66,8 @@
 	     <section class="note box main" id="about">
 			<h2>About this information</h2>
 			<p></p>
+			<p><em><a href="http://detentionlogs.com.au/about/glossary" title="Detention Logs Glossary">Find definitions of terms in the glossary</a></em></p>
+			
 			<h3>Disclaimer</h3>
 			<p>The data published here has been provided by THIS IS HOLDING TEXT the Department of immigration and citizenship under the freedom of information act 1982.  Detention logs has only altered data that contains defamatory imputations or may be in contempt of legal proceedings.</p>
 			<p>If you see anything that is defamatory or in contempt of court please contact us.</p>
