--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -962,9 +962,6 @@ body {
 .incident {
 	max-width: 42rem;
 	margin: 0 auto;
-	.main {
-		max-width: 42rem;		
-	}
 	.related,
 	.box {
 		clear: both;
@@ -976,10 +973,9 @@ body {
 		border-right-width: 2px;
 		border-right-width: 0.125rem;
 		border-right-style: solid;
-		margin-left: -2rem;
-		margin-right: -2rem;
-		padding-right: 2rem;
 		padding-left: 2rem;
+		padding-right: 2rem;
+	}
 	.incident-primary-meta {
 		font-weight: normal;
 	}
@@ -1305,12 +1301,36 @@ header .primary-nav {
 /* @end Page Structure */
 
 }
-@media all and (min-width: 60em) {
+@media all and (min-width: 55em) {
 /* @group Page Structure */
 /* @group Incidents list */
 	.incident-explorer {
-		.incident-summary {
-			width: 40%%;
+		.incident-body {
+			width: 35%;
+		}
+	}
+/* @end Incidents list */
+/* @end Page Structure */
+
+}
+@media all and (min-width: 58em) {
+/* @group Page Structure */
+/* @group Incidents list */
+	.incident-explorer {
+		.incident-body {
+			width: 40%;
+		}
+	}
+/* @end Incidents list */
+/* @end Page Structure */
+
+}
+@media all and (min-width: 62em) {
+/* @group Page Structure */
+/* @group Incidents list */
+	.incident-explorer {
+		.incident-body {
+			width: 30%;
 			padding-right: 1rem;
 		}
 		.incident-secondary {
@@ -1332,18 +1352,40 @@ header .primary-nav {
 				clear: right;
 			}
 	}
-}
-
 /* @end Incidents list */
 /* @end Page Structure */
 
+}
+@media all and (min-width: 64em) {
+/* @group Page Structure */
+/* @group Incidents list */
+	.incident-explorer {
+		.incident-body {
+			width: 33%;
+		}
+	}
+/* @end Incidents list */
+/* @end Page Structure */
 
+}
+@media all and (min-width: 67em) {
+/* @group Page Structure */
+/* @group Incidents list */
+	.incident-explorer {
+		.incident-body {
+			width: 35%;
+		}
+	}
+/* @end Incidents list */
+/* @end Page Structure */
+
+}
 @media all and (min-width: 73em) {
 /* @group Page Structure */
 /* @group Incidents list */
 	.incident-explorer {
-		.incident-summary {
-			width: 40%%;
+		.incident-body {
+			width: 40%;
 			padding-right: 1rem;
 		}
 		.incident-secondary {
@@ -1364,8 +1406,21 @@ header .primary-nav {
 				clear: right;
 			}
 	}
-}
 /* @end Incidents list */
+/* @end Page Structure */
+}
+@media all and (min-width: 76em) {
+/* @group Page Structure */
+/* @group Incidents list */
+	.incident-explorer {
+		.incident-body {
+
+		}
+	}
+/* @end Incidents list */
+/* @end Page Structure */
+
+}
 
 @media all and (min-width: 80em) {
 
@@ -1384,6 +1439,12 @@ header .primary-nav {
 	}
 	.reading > * {
 	max-width: 38rem;
+	}
+	.incident {
+		.box {
+			margin-right: -2rem;
+			margin-left: -2rem;
+		}
 	}
 /* @group Incidents list */
 
