--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,14 +1,18 @@
 	<article class="incident" role="">
 	    <section class="incident-primary main">
 	        <h1>Incident <%= @incident.incident_number %></h1>
-			<dl class="related-signpost discrete">
+<!-- 	        if has detail incident report -->
+	        <em class="detail-report-link"><a href="#" title="Download the Incident Detail Report for this incident to find more information" class="docs-icon discrete distinct-download">See Incident Detail Report [PDF]</a></em>
+<!-- 	        end if -->
+			<!--
+<dl class="related-signpost discrete">
 				<dt class="docs-icon">Related Documents</dt>
 					<dd><a href="#attachments" title="see documents related to this incident">1</a></dd>
 				<dt class="investigations-icon">Related Investigations</dt>
 					<dd><a href="#related-investigations" title="see stories related to this incident">1</a></dd>
 			</dl>
-	        
-	        <a href="#about" title="about the information on this page" class="supporting">What is this?</a>
+-->
+	        <a href="#about" title="about the information on this page" class="supporting help">What is this?</a>
 			<dl class="incident-primary-meta">
 				<dt class="incident-type">Type</dt>
 					<dd class="incident-type"><a href=""><%= @incident.incident_type %></a></dd>
