--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -168,7 +168,7 @@ a:focus {
 	color: #111;
 }
 
-.related {
+.editors-additional {
 	background-color: $contrast;
 }
 .redacted {
@@ -224,9 +224,19 @@ input:-ms-input-placeholder { color: #555;}
 	color: #222;
 }
 .distinct-download {
-	background-color: $contrast;
+	background-color: lighten($note, 20%);
+	border-color: $note;
 	color: $regular-text;
-	border-color: $fade;
+	&:hover,
+	&:focus {
+		border-color: darken($note, 30%);
+		background-color: $note;
+		color: #222;
+	}
+	&:active {
+		background-color: $regular-text;
+		color: $note;	
+	}
 }
 
 /* @end Colours */
@@ -275,9 +285,6 @@ input:-ms-input-placeholder { color: #555;}
 	letter-spacing: 0.1875rem;
 	font-size: .875em;
 }
-
-.additional-info {
-}
 .distinct-download {
 	padding: .25rem .5rem;
 	border-width:  1px;
@@ -292,6 +299,23 @@ input:-ms-input-placeholder { color: #555;}
 	padding-left: 1.75rem;
 	background-position-x: .25rem;
 	width: auto;
+}
+.editors-additional {
+	h2 {
+		text-align: center;
+		margin-bottom: 1rem;		
+	}
+	h3 {
+		font-weight: bold;
+		font-size: 20px;
+		font-size: 1.25rem;
+		text-decoration: none;
+		padding-top: 32px;
+		padding-top: 2rem;
+		margin-bottom: 16px;
+		margin-bottom: 1rem;
+} /* h2 styles */
+
 }
 /* @end Typography */
 /* @group Page structure */
@@ -339,7 +363,7 @@ input:-ms-input-placeholder { color: #555;}
 		padding-top: 0;
 		margin-top: 0;
 	}
-	&.related {
+	&.editors-additional {
 	border: none;
 	} /* exception */
 }
@@ -374,7 +398,9 @@ input:-ms-input-placeholder { color: #555;}
 .incident {
 	clear: both;
 	float: none;
+	padding-top: 2rem;
 	h1 {
+		margin-top: 0;
 		font-size: 1.125rem;
 	}
 	.help {
@@ -427,7 +453,7 @@ input:-ms-input-placeholder { color: #555;}
 	}
 	.incident-location {
 		.add-details {
-			visibility: hidden;
+			/* visibility: collapse; */
 			font-weight: normal;
 		}
 		.collapsible-heading-toggle {
@@ -442,7 +468,7 @@ input:-ms-input-placeholder { color: #555;}
 		margin-top: 0;
 		margin-bottom: 0;
 	}
-	.related {
+	.editors-additional {
 		margin-top: 2rem;
 		padding-top: 1rem;
 		padding-bottom: 1rem;
@@ -892,8 +918,9 @@ nav {
 /* @end Elements */
 
 /* @group Colours */
-.related {
+.editors-additional {
 	background: #fff;
+	border-color: $contrast;
 }
 .header-row {
 	background: $note;
@@ -994,7 +1021,14 @@ body {
 .incident {
 	max-width: 42rem;
 	margin: 0 auto;
-	.related,
+	h1 {
+		display: inline-block;
+	}
+	.detail-report-link {
+		display: inline-block;
+		float: right;
+	}
+	.editors-additional,
 	.box {
 		clear: both;
 	}
@@ -1034,6 +1068,12 @@ body {
 		padding-bottom: $scale-4;
 	}
 }
+.editors-additional {
+	box-shadow: inset 0px 8px 5px pink;
+	border-top-width: .07rem;
+	border-top-style: solid;
+}
+
 /* @end Incidents */
 /* @group Incidents List */
 
