emphasised the to index link in location info

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -36,7 +36,7 @@
 <li><p>Hughes (aka Stage 2), contains female-only area Banksia</p></li>
 <li><p>Fowler (aka Stage 3), for “high risk detainees – people at high risk to others or themselves,” according to <a href="http://www.abc.net.au/4corners/stories/2011/10/20/3344543.htm">ABC’s Four Corners program Asylum (October, 2011)</a></p></li>
 </ul>
-						<p><a href="link to location search" title="index of available incidents from this locations">see all available incidents recorded at <%= @incident.location %></a></p>
+						<p><strong><a href="link to location search" title="index of available incidents from this locations">See all available incident records from <%= @incident.location %></a></strong></p>
 					</div>
 					</dd>
 			</dl>
