mocked up prev and next incident links

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -87,4 +87,10 @@
 			<p>The data published here has been provided by THIS IS HOLDING TEXT the Department of immigration and citizenship under the freedom of information act 1982.  Detention logs has only altered data that contains defamatory imputations or may be in contempt of legal proceedings.</p>
 			<p>If you see anything that is defamatory or in contempt of court please contact us.</p>
 		 </section>
+ 	     <nav class="sideways-nav supporting main">
+		    <ul>
+			    <li class="next"><a href="" title="to the next incident report">Next incident report</a></li>
+	    	    <li class="previous"><a href="" title="to the previous incident report">Pevious incident report</a></li>
+		    </ul>
+	    </nav>
 	</article>
