--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -492,7 +492,8 @@ input:-ms-input-placeholder { color: #555;}
 	.incident-primary-meta {
 		font-weight: bold;
 		a {
-			text-decoration: none;
+			text-decoration: underline;
+			font-weight: normal;
 		}
 	}
 	.incident-summary {
