--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -94,3 +94,4 @@
 		    </ul>
 	    </nav>
 	</article>
+<!-- edit --><div style="text-align:center;text-transform:uppercase"><%= link_to 'Edit', edit_incident_path(@incident) %></div>
