--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing incident</h1>
+<div class="main">
+	<h1>Editing incident</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @incident %> |
-<%= link_to 'Back', incidents_path %>
+	<%= link_to 'Show', @incident %> |
+	<%= link_to 'Back', incidents_path %>
+</div>
