--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header class="site-header">
-    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention Logs</a></h1>
+    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention Logs<span> beta</span></a></h1>
     	<nav class="main-nav">
     		<a href="#navigation" class="menu-btn">Menu</a>
 			<ul class="primary-nav">
