--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -7,13 +7,15 @@
 	        <h1>Incident <%= @incident.incident_number %></h1>
 	        
 	        <% if @incident.detailed_report.path %><em class="detail-report-link"><a href="<%= @incident.detailed_report.url %>" title="Download the Incident Detail Report for this incident to find more information" class="docs-icon discrete distinct-download">See Incident Detail Report [PDF]</a></em>
+	        <% end %>
+	        
 	        
 	        <a href="#about" title="about the information on this page" class="supporting help">What is this?</a>
 			<dl class="incident-primary-meta">
 				<dt class="incident-type">Type</dt>
-					<dd class="incident-type"><%= @incident.incident_type %> <a href="" class="supporting">see all incidents like this</a></dd>
+					<dd class="incident-type"><%= @incident.incident_type %><!-- <a href="" class="supporting">see all incidents like this</a> --></dd>
 				<dt class="incident-occured-on">Occured On</dt>
-					<dd class="incident-occured-on"><time><%= @incident.occured_on.strftime("%d %b %Y %H:%M") %></time> <a href="" class="supporting">see incidents on this day</a></dd>
+					<dd class="incident-occured-on"><time><%= @incident.occured_on.strftime("%d %b %Y %H:%M") %></time><!-- <a href="" class="supporting">see incidents on this day</a>--></dd>
 				<dt class="incident-location">Location</dt>
 					<dd class="incident-location"><%= @incident.location %>
 					<strong class="add-details">info</strong>
