--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -109,6 +109,9 @@ abbr {
 	border-bottom: 1px #aaa dashed; 
 	cursor: help;
 }
+	.glossary dt abbr {
+		border: 0;
+	}
 strong {
 	font-weight: bold;
 }
@@ -302,6 +305,35 @@ input:-ms-input-placeholder { color: #555;}
 	margin-bottom: 1rem;
 	display: inline-block;
 }
+.glossary {
+	dt {
+		font-weight: bold;
+		letter-spacing: 1px;
+		letter-spacing: .07rem;
+		padding-top: 32px;
+		padding-top: 2rem;
+		&:hover:after {
+  		    color: lighten($fade, 15%);
+		    content: "#" attr(id);
+		    display: inline-block;
+		    font-size: 12px;
+		    font-size: .75rem;
+		    line-height: 1;
+		    padding-left: .75rem;
+		    text-transform: none;
+		    vertical-align: middle;
+		} /* Thanks to alistapart */
+		abbr {
+			cursor: default;
+		}
+	}
+	dd {
+		margin: 0 0 1rem;
+		p {
+			margin-top: 0;	
+		}
+	}
+}
 .docs-icon.distinct-download {
 	padding-left: 1.75rem;
 	background-position-x: .25rem;
@@ -321,8 +353,7 @@ input:-ms-input-placeholder { color: #555;}
 		padding-top: 2rem;
 		margin-bottom: 16px;
 		margin-bottom: 1rem;
-} /* h2 styles */
-
+	} /* h2 styles */
 }
 /* @end Typography */
 /* @group Page structure */
