--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -51,7 +51,7 @@
 	                <dd class="incident-location-details"><%= @incident.location_details %></dd>
 	    </dl>
 
-		    <% if @incident.detailed_report $! %><a class="main discrete" href="http://detentionlogs.com.au/adopt-an-incident">Help get more information about this incident</a>
+		    <% if @incident.detailed_report $! %><a class="discrete" href="http://detentionlogs.com.au/adopt-an-incident">Help get more information about this incident</a>
 	        <% end %>
 
 <!-- 	    If there are related documents or investigations  or editors notes -->
