--- a/app/views/gateway/index.html.erb
+++ b/app/views/gateway/index.html.erb
@@ -32,7 +32,7 @@
     <body class="h-card holding">
         <article class="site-intro">
            <h1 class="logo p-org p-name">Detention Logs</h1>
-	       <p class="loud p-note">We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
+	       <p class="loud p-note">We publish data, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.</p>
         </article>
 
         <%= form_for @subscription, :html => {:class => "mail-list"} do |f| %>
