--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,112 +1,126 @@
 <section class="main incident-explorer" role="">
 <form class="incident-filter" action="#">
 	<legend>Find Incidents</legend>
-	<label>Type</label>
+	<label for="incident_type">Type</label>
 		<select id="incident_type">
 			<option selected="selected">All</option>
+Abusive/Aggressive Behaviour</option>
 			<option>Accident/Injury - Serious</option>
-			<option>Complaint Unresolved in time</option>
-			<option>Disturbance - Minor</option>
-			<option>Self Harm - Threatened</option>
-			<option>Voluntary starvation (<24 hrs)</option>
-			<option>Abusive/Aggressive Behaviour</option>
-			<option>Self Harm - Actual</option>
-			<option>Voluntary starvation (>24 hrs)</option>
-			<option>Complaint - re MinorIncident</option>
 			<option>Assault - Minor</option>
+			<option>Assault - Not OBH</option>
+			<option>Assault - Serious</option>
+			<option>Barricade/Sit-In</option>
+			<option>Birth of a child</option>
+			<option>Clinical Depression</option>
+			<option>Complaint - re Crit Incident</option>
+			<option>Complaint - re MajorIncident</option>
+			<option>Complaint - re MinorIncident</option>
+			<option>Complaint Unresolved in time</option>
+			<option>Contamination/Infection</option>
+			<option>Contraband brought by Visitor</option>
 			<option>Contraband found</option>
 			<option>Damage - Minor</option>
-			<option>Failure - IT Systems</option>
-			<option>Transfer to APOD</option>
-			<option>Use of Force</option>
-			<option>Assault - Not OBH</option>
-			<option>Use of Observation Rm > 24 hrs</option>
-			<option>Voluntary Starvation - End of</option>
-			<option>Disturbance - Major</option>
-			<option>Emergency - medical - offsite</option>
-			<option>Demonstration - Onsite</option>
-			<option>Media - Unauthorised presence</option>
-			<option>Transfer btwn facilities</option>
-			<option>Escape</option>
-			<option>Media - Incident of interest</option>
-			<option>Failure - Security System</option>
-			<option>Use of Restraints</option>
-			<option>Escape - Attempted</option>
-			<option>Assault - Serious</option>
-			<option>Removal - Aborted</option>
-			<option>Media - Approach staff/clients</option>
-			<option>Visitor-Other refused</option>
-			<option>Self Harm-Attpted Serious</option>
-			<option>Birth of a child</option>
 			<option>Damage - Serious</option>
-			<option>Property - Missing</option>
-			<option>Failure - Power</option>
-			<option>Theft</option>
-			<option>Demonstration - Offsite</option>
-			<option>Voluntary starvation by Minor</option>
-			<option>Notification by Welfare Auth</option>
-			<option>Weapon - Client in possession</option>
-			<option>Contraband brought by Visitor</option>
-			<option>Barricade/Sit-In</option>
-			<option>Use of Emergency Equip</option>
-			<option>Complaint - re Crit Incident</option>
 			<option>Death</option>
-			<option>Food poisoning</option>
-			<option>Public Health Risk - L/Serious</option>
-			<option>Substance abuse</option>
-			<option>Contamination/Infection</option>
+			<option>Demonstration - Offsite</option>
+			<option>Demonstration - Onsite</option>
+			<option>Disturbance - Major</option>
+			<option>Disturbance - Minor</option>
+			<option>Emergency - medical - offsite</option>
+			<option>Escape</option>
+			<option>Escape - Attempted</option>
 			<option>Escape - Mass Breakout</option>
-			<option>Use of Restraints-Unplnd</option>
-			<option>Visitor-HP refused access</option>
-			<option>Property - Missing Money</option>
-			<option>Riot</option>
-			<option>Use of weaponry by a Client</option>
-			<option>Clinical Depression</option>
-			<option>Complaint - re MajorIncident</option>
+			<option>Failure - IT Systems</option>
+			<option>Failure - Power</option>
+			<option>Failure - Security System</option>
+			<option>Food poisoning</option>
 			<option>Industrial Action - Minor</option>
 			<option>Industrial Action - No Labour</option>
+			<option>Media - Approach staff/clients</option>
+			<option>Media - Incident of interest</option>
+			<option>Media - Unauthorised presence</option>
+			<option>Notification by Welfare Auth</option>
+			<option>Property - Missing</option>
+			<option>Property - Missing Money</option>
+			<option>Public Health Risk - L/Serious</option>
 			<option>Public Health Risk - Serious</option>
+			<option>Removal - Aborted</option>
+			<option>Riot</option>
+			<option>Self Harm - Actual</option>
+			<option>Self Harm - Threatened</option>
+			<option>Self Harm-Attpted Serious</option>
+			<option>Substance abuse</option>
+			<option>Theft</option>
 			<option>Threat-Bomb Biologic Chem</option>
+			<option>Transfer btwn facilities</option>
+			<option>Transfer to APOD</option>
+			<option>Use of Emergency Equip</option>
+			<option>Use of Force</option>
+			<option>Use of Observation Rm > 24 hrs</option>
+			<option>Use of Restraints</option>
+			<option>Use of Restraints-Unplnd</option>
+			<option>Use of weaponry by a Client</option>
 			<option>Visitor-Client denied</option>
-<!-- 		 end -->
+			<option>Visitor-HP refused access</option>
+			<option>Visitor-Other refused</option>
+			<option>Voluntary Starvation - End of</option>
+			<option>Voluntary starvation (<24 hrs)</option>
+			<option>Voluntary starvation (>24 hrs)</option>
+			<option>Voluntary starvation by Minor</option>
+			<option>Weapon - Client in possession</option>
+			<!-- 		 end -->
 		</select>
-	<label>Location</label>
+	<label for="location">Location</label>
 <!-- 		 @incidents.incident_location  -->
 		<select id="location">
 			<option selected="selected">All</option>
-			<option>Berrimah Accommodation Facility</option>
-			<option>Brisbane ITA</option>
-			<option>Christmas Island</option>
-			<option>Construction Camp APOD</option>
-			<option>Curtin IDC</option>
-			<option>Darwin Airport Lodge</option>
-			<option>Gwalia Lodge</option>
-			<option>Inverbrackie APOD</option>
-			<option>Jandakot APOD</option>
-			<option>Leonora APOD</option>
-			<option>Leonora Lodge</option>
-			<option>Lilac Aqua</option>
-			<option>Maribyrnong IDC</option>
-			<option>Melbourne ITA</option>
-			<option>North West Point Immigration Facility</option>
-			<option>Northern IDC</option>
-			<option>Perth IDC</option>
-			<option>Perth IRH</option>
-			<option>Phosphate Hill APOD</option>
-			<option>Phosphate Hill B Compound</option>
-			<option>Port Augusta IRH</option>
-			<option>SA Detention Operations</option>
-			<option>Scherger IDC</option>
-			<option>Sydney IRH</option>
-			<option>Villawood IDC</option>
-			<option>Virginia Palms Motel</option>
+			<optgroup label="Chistmas Island">
+				<option>Christmas Island</option>
+				<option>Construction Camp APOD</option>
+				<option>Lilac Aqua</option>
+				<option>North West Point Immigration Facility</option>
+				<option>Phosphate Hill APOD</option>
+				<option>Phosphate Hill B Compound</option>
+			</optgroup>
+			<optgroup label="New South Wales">
+				<option>Sydney IRH</option>
+				<option>Villawood IDC</option>
+			</optgroup>
+			<optgroup label="Northern Territory">
+				<option>Berrimah Accommodation Facility</option>
+				<option>Darwin Airport Lodge</option>
+				<option>Northern IDC</option>
+			</optgroup>
+			<optgroup label="Queensland">
+				<option>Brisbane ITA</option>
+				<option>Scherger IDC</option>
+				<option>Virginia Palms Motel</option>		
+			</optgroup>
+			<optgroup label="South Australia">
+				<option>Inverbrackie APOD</option>
+				<option>Port Augusta IRH</option>
+				<option>SA Detention Operations</option>
+			</optgroup>
+			<optgroup label="Victoria">
+				<option>Maribyrnong IDC</option>
+				<option>Melbourne ITA</option>	
+			</optgroup>
+			<optgroup label="Western Australia">
+				<option>Curtin IDC</option>
+				<option>Gwalia Lodge</option>
+				<option>Jandakot APOD</option>
+				<option>Leonora APOD</option>
+				<option>Leonora Lodge</option>
+				<option>Perth IDC</option>
+				<option>Perth IRH</option>
+			</optgroup>
 <!-- 		 end -->
 		</select>
 	<label>First Date</label>
 		<%= date_select("incident", "start_date") %>
 	<label>Last Date</label>
 		<%= date_select("incident", "end_date") %>
-	<label>Has detail report</label>
+	<label for="has_detail_report">Has detail report</label>
 		<input type="checkbox" id="has_detail_report" />
 	<input class="btn" type="submit" role="button" value="Go"/>
 </form>
