fixed the url with <input>  for bookmark the event

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -129,7 +129,7 @@ Abusive/Aggressive Behaviour</option>
 
 <dl class="page-link supporting">
 	<dt class="">Link for these results</dt>
-		<dd><a href="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" title="url to share or bookmark these results"><%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %></a></dd>
+		<dd><input value="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" title="url to share or bookmark these results" readonly></dd>
 </dl>
 
 <ul class="header-row supporting">
