--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -19,7 +19,7 @@
 				<dt class="incident-location">Location</dt>
 					<dd class="incident-location"><%= @incident.location %>
 					<strong class="add-details">info</strong>
-					<div class="additional-info discrete box note">
+					<div class="additional-info discrete box note collapsible-content-collapsed">
 						<h2>About <%= @incident.location %></h2>
 						<p>Villawood Immigrations Detention Centre (IDC), managed by <a href="http://www.serco-ap.com.au/">Serco Australia Pty Ltd</a> (Australian branch of the UK based multinational <a href="http://www.serco.com/">Serco Group</a>), is located in western Sydney at <a href="https://maps.google.com.au/maps/ms?msid=201451526145055160953.00049f30e3d60e94e64f7&amp;msa=0&amp;ll=-33.874406,151.165695&amp;spn=0.488001,0.889206&amp;iwloc=00049f311be096c3099bf">15 Birmingham Avenue, Villawood NSW 2163</a>, and has an operating capacity of 379 detainees and a contingency capacity of 480 (as of <a href="http://www.immi.gov.au/managing-australias-borders/detention/facilities/capacity/">29th April 2013</a>).</p>
 
