--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -26,3 +26,10 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+fieldset {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	display:block; 
+}
