chucked in start of layout

--- a/app/views/incidents/adopt.html.erb
+++ b/app/views/incidents/adopt.html.erb
@@ -1,1 +1,3 @@
-<a href="https://www.righttoknow.org.au/new/diac/?body=give+me+some+info+about+<%= @incident.incident_number %> "><%= @incident.incident_number %></a>
+<article class="main reading">
+	<a href="https://www.righttoknow.org.au/new/diac/?body=give+me+some+info+about+<%= @incident.incident_number %> "><%= @incident.incident_number %></a>
+</article>
