fixed glossary link

--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -35,8 +35,8 @@
 			</ul>
 			<ul class="supporting">
 				<li><a href="http://detentionlogs.com.au/about/resources">Resources</a></li>
-				<li><a href="http://detentionlogs.com.au/glossary">Glossary</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Our Principles</a></li>				
+				<li><a href="http://detentionlogs.com.au/about/glossary">Glossary</a></li>
+				<li><a href="http://detentionlogs.com.au/about/principles">Our Principles</a></li>				
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
