--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -7,6 +7,7 @@
 	        <h1>Incident <%= @incident.incident_number %></h1>
 	        
 	        <% if @incident.detailed_report.path %><em class="detail-report-link"><a href="<%= @incident.detailed_report.url %>" title="Download the Incident Detail Report for this incident to find more information" class="docs-icon discrete distinct-download">See Incident Detail Report [PDF]</a></em>
+	        <% else %><em class="detail-report-link"><a href="<%= url_for(@incident) %>/adopt" title="help get more information about this incident" class="discrete distinct-download">Adopt this incident</a></em>
 	        <% end %>
 	        
 	        
@@ -50,9 +51,6 @@
 	            <dt class="incident-location-details">Location Details</dt>
 	                <dd class="incident-location-details"><%= @incident.location_details %></dd>
 	    </dl>
-
-		    <% if @incident.detailed_report $! %><a class="discrete" href="http://detentionlogs.com.au/adopt-an-incident">Help get more information about this incident</a>
-	        <% end %>
 
 <!-- 	    If there are related documents or investigations  or editors notes -->
 	    <section class="discrete editors-additional main" id="editors-additions">
